docs/v0.4/_sources/api/gwpy.frequencyseries.FrequencySeries.rst.txt


FrequencySeries
====================================

.. currentmodule:: gwpy.frequencyseries

.. autoclass:: FrequencySeries
   :no-inherited-members:

   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~FrequencySeries.T
      ~FrequencySeries.base
      ~FrequencySeries.cgs
      ~FrequencySeries.channel
      ~FrequencySeries.ctypes
      ~FrequencySeries.data
      ~FrequencySeries.df
      ~FrequencySeries.dtype
      ~FrequencySeries.dx
      ~FrequencySeries.epoch
      ~FrequencySeries.equivalencies
      ~FrequencySeries.f0
      ~FrequencySeries.flags
      ~FrequencySeries.flat
      ~FrequencySeries.frequencies
      ~FrequencySeries.imag
      ~FrequencySeries.info
      ~FrequencySeries.isscalar
      ~FrequencySeries.itemsize
      ~FrequencySeries.name
      ~FrequencySeries.nbytes
      ~FrequencySeries.ndim
      ~FrequencySeries.real
      ~FrequencySeries.shape
      ~FrequencySeries.si
      ~FrequencySeries.size
      ~FrequencySeries.strides
      ~FrequencySeries.unit
      ~FrequencySeries.value
      ~FrequencySeries.x0
      ~FrequencySeries.xindex
      ~FrequencySeries.xspan
      ~FrequencySeries.xunit

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~FrequencySeries.all
      ~FrequencySeries.any
      ~FrequencySeries.append
      ~FrequencySeries.argmax
      ~FrequencySeries.argmin
      ~FrequencySeries.argsort
      ~FrequencySeries.astype
      ~FrequencySeries.byteswap
      ~FrequencySeries.choose
      ~FrequencySeries.clip
      ~FrequencySeries.compress
      ~FrequencySeries.conj
      ~FrequencySeries.conjugate
      ~FrequencySeries.copy
      ~FrequencySeries.crop
      ~FrequencySeries.cumprod
      ~FrequencySeries.cumsum
      ~FrequencySeries.decompose
      ~FrequencySeries.diagonal
      ~FrequencySeries.diff
      ~FrequencySeries.dot
      ~FrequencySeries.dump
      ~FrequencySeries.dumps
      ~FrequencySeries.ediff1d
      ~FrequencySeries.fill
      ~FrequencySeries.filter
      ~FrequencySeries.filterba
      ~FrequencySeries.flatten
      ~FrequencySeries.from_hdf5
      ~FrequencySeries.from_lal
      ~FrequencySeries.from_pycbc
      ~FrequencySeries.getfield
      ~FrequencySeries.ifft
      ~FrequencySeries.insert
      ~FrequencySeries.is_compatible
      ~FrequencySeries.is_contiguous
      ~FrequencySeries.item
      ~FrequencySeries.itemset
      ~FrequencySeries.max
      ~FrequencySeries.mean
      ~FrequencySeries.median
      ~FrequencySeries.min
      ~FrequencySeries.nansum
      ~FrequencySeries.newbyteorder
      ~FrequencySeries.nonzero
      ~FrequencySeries.override_unit
      ~FrequencySeries.pad
      ~FrequencySeries.plot
      ~FrequencySeries.prepend
      ~FrequencySeries.prod
      ~FrequencySeries.ptp
      ~FrequencySeries.put
      ~FrequencySeries.ravel
      ~FrequencySeries.read
      ~FrequencySeries.repeat
      ~FrequencySeries.reshape
      ~FrequencySeries.resize
      ~FrequencySeries.round
      ~FrequencySeries.searchsorted
      ~FrequencySeries.setfield
      ~FrequencySeries.setflags
      ~FrequencySeries.sort
      ~FrequencySeries.squeeze
      ~FrequencySeries.std
      ~FrequencySeries.sum
      ~FrequencySeries.swapaxes
      ~FrequencySeries.take
      ~FrequencySeries.to
      ~FrequencySeries.to_hdf5
      ~FrequencySeries.to_lal
      ~FrequencySeries.to_pycbc
      ~FrequencySeries.tofile
      ~FrequencySeries.tolist
      ~FrequencySeries.tostring
      ~FrequencySeries.trace
      ~FrequencySeries.transpose
      ~FrequencySeries.update
      ~FrequencySeries.value_at
      ~FrequencySeries.var
      ~FrequencySeries.view
      ~FrequencySeries.write
      ~FrequencySeries.zip
      ~FrequencySeries.zpk

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: T
   .. autoattribute:: base
   .. autoattribute:: cgs
   .. autoattribute:: channel
   .. autoattribute:: ctypes
   .. autoattribute:: data
   .. autoattribute:: df
   .. autoattribute:: dtype
   .. autoattribute:: dx
   .. autoattribute:: epoch
   .. autoattribute:: equivalencies
   .. autoattribute:: f0
   .. autoattribute:: flags
   .. autoattribute:: flat
   .. autoattribute:: frequencies
   .. autoattribute:: imag
   .. autoattribute:: info
   .. autoattribute:: isscalar
   .. autoattribute:: itemsize
   .. autoattribute:: name
   .. autoattribute:: nbytes
   .. autoattribute:: ndim
   .. autoattribute:: real
   .. autoattribute:: shape
   .. autoattribute:: si
   .. autoattribute:: size
   .. autoattribute:: strides
   .. autoattribute:: unit
   .. autoattribute:: value
   .. autoattribute:: x0
   .. autoattribute:: xindex
   .. autoattribute:: xspan
   .. autoattribute:: xunit

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: all
   .. automethod:: any
   .. automethod:: append
   .. automethod:: argmax
   .. automethod:: argmin
   .. automethod:: argsort
   .. automethod:: astype
   .. automethod:: byteswap
   .. automethod:: choose
   .. automethod:: clip
   .. automethod:: compress
   .. automethod:: conj
   .. automethod:: conjugate
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: cumprod
   .. automethod:: cumsum
   .. automethod:: decompose
   .. automethod:: diagonal
   .. automethod:: diff
   .. automethod:: dot
   .. automethod:: dump
   .. automethod:: dumps
   .. automethod:: ediff1d
   .. automethod:: fill
   .. automethod:: filter
   .. automethod:: filterba
   .. automethod:: flatten
   .. automethod:: from_hdf5
   .. automethod:: from_lal
   .. automethod:: from_pycbc
   .. automethod:: getfield
   .. automethod:: ifft
   .. automethod:: insert
   .. automethod:: is_compatible
   .. automethod:: is_contiguous
   .. automethod:: item
   .. automethod:: itemset
   .. automethod:: max
   .. automethod:: mean
   .. automethod:: median
   .. automethod:: min
   .. automethod:: nansum
   .. automethod:: newbyteorder
   .. automethod:: nonzero
   .. automethod:: override_unit
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: prepend
   .. automethod:: prod
   .. automethod:: ptp
   .. automethod:: put
   .. automethod:: ravel
   .. automethod:: read
   .. automethod:: repeat
   .. automethod:: reshape
   .. automethod:: resize
   .. automethod:: round
   .. automethod:: searchsorted
   .. automethod:: setfield
   .. automethod:: setflags
   .. automethod:: sort
   .. automethod:: squeeze
   .. automethod:: std
   .. automethod:: sum
   .. automethod:: swapaxes
   .. automethod:: take
   .. automethod:: to
   .. automethod:: to_hdf5
   .. automethod:: to_lal
   .. automethod:: to_pycbc
   .. automethod:: tofile
   .. automethod:: tolist
   .. automethod:: tostring
   .. automethod:: trace
   .. automethod:: transpose
   .. automethod:: update
   .. automethod:: value_at
   .. automethod:: var
   .. automethod:: view
   .. automethod:: write
   .. automethod:: zip
   .. automethod:: zpk

   
   